--- a/toolkit-config.yaml
+++ b/toolkit-config.yaml
@@ -14,6 +14,10 @@ morning_brief:
     - "@NateBJones"
     - "@ycombinator"
     - "@EfficientNLP"
+    - "@anthropaboratory"
+    - "@RileyBrown"
+    - "@AICodeKing"
+    - "@AutomataLearningLab"
   max_videos: 5                  # Max videos per channel to check
   lookback_hours: 24             # Only videos from last N hours
   summary_style: bullets         # Output style: bullets | prose | detailed
